# weiver

./: .gitignore  pyproject.toml
tests/: test_main.py
weiver/: api_service.py  exceptions.py  history.txt  weather.py
weiver/utils/: func.py  gps.py  history.py  validate.py  weather_formater.py
