[tool.poetry]
name = "weiver"
version = "0.1.0"
description = ""
authors = ["Vladimirov Kirill <kvladimirov.main@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
serial = "^0.0.97"
gps = "^3.19"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
